--- a/pom.xml
+++ b/pom.xml
@@ -1,200 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.cts.devops</groupId>
-	<artifactId>onlinebanking</artifactId>
-	<packaging>war</packaging>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>OnlineBanking Maven Webapp</name>
-	<url>http://maven.apache.org</url>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<sonar.language>java</sonar.language>
-	</properties>
-	<dependencies>
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"> <modelVersion>4.0.0</modelVersion> <groupId>com.cts.devops</groupId> <artifactId>onlinebanking</artifactId> <packaging>war</packaging> <version>0.0.1-SNAPSHOT</version> <name>OnlineBanking Maven Webapp</name> <url>http://maven.apache.org</url> <properties>  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  <sonar.language>java</sonar.language> </properties> <dependencies>
+  <dependency>   <groupId>junit</groupId>   <artifactId>junit</artifactId>   <version>4.4</version>   <scope>test</scope>  </dependency>
+  <dependency>   <groupId>org.powermock</groupId>   <artifactId>powermock-module-junit4</artifactId>   <version>1.5.6</version>   <scope>test</scope>  </dependency>  <dependency>   <groupId>org.powermock</groupId>   <artifactId>powermock-api-mockito</artifactId>   <version>1.5.6</version>   <scope>test</scope>  </dependency>
+  <dependency>   <groupId>org.mockito</groupId>   <artifactId>mockito-all</artifactId>   <version>1.9.5</version>   <scope>test</scope>  </dependency>
 
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.4</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.powermock</groupId>
-			<artifactId>powermock-module-junit4</artifactId>
-			<version>1.5.6</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.powermock</groupId>
-			<artifactId>powermock-api-mockito</artifactId>
-			<version>1.5.6</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.9.5</version>
-			<scope>test</scope>
-		</dependency>
-
-
-
-		<!-- <dependency> <groupId>com.sun</groupId> <artifactId>tools</artifactId> 
-			<version>1.6.0</version> </dependency> -->
-
-		<!-- Struts 2 -->
-		<dependency>
-			<groupId>org.apache.struts</groupId>
-			<artifactId>struts2-core</artifactId>
-			<version>2.3.8</version>
-
-		</dependency>
-
-		<!-- MySQL database driver -->
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.9</version>
-		</dependency>
-
-		<!-- Hibernate Jar -->
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-annotations</artifactId>
-			<version>3.2.0.ga</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>3.3.0.GA</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.6.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate</artifactId>
-			<version>3.2.1.ga</version>
-			<exclusions>
-				<exclusion>
-					<groupId>javax.transaction</groupId>
-					<artifactId>jta</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>cglib</groupId>
-					<artifactId>cglib</artifactId>
-
-				</exclusion>
-				<exclusion>
-					<artifactId>asm</artifactId>
-					<groupId>asm</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>cglib</groupId>
-			<artifactId>cglib</artifactId>
-			<version>2.2</version>
-		</dependency>
-		<!-- Hibernate Jar Ends -->
-		<!-- Log4j for logging -->
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
-			<scope>provided</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>com.sun.jdmk</groupId>
-					<artifactId>jmxtools</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.sun.jmx</groupId>
-					<artifactId>jmxri</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-	</dependencies>
-	<build>
-		<pluginManagement>
-      			<plugins>
-        			<plugin>
-          			<groupId>org.apache.maven.plugins</groupId>
-          			<artifactId>maven-compiler-plugin</artifactId>
-          			<version>3.3</version>
-          			<configuration>
-					<source>1.7</source>
-          				<target>1.7</target>
-          			</configuration>
-        			</plugin>
-				<plugin>
-          				<groupId>org.apache.maven.plugins</groupId>
-          				<artifactId>maven-surefire-plugin</artifactId>
-          				<version>2.18.1</version>
-					<configuration>
-						<forkMode>pertest</forkMode>
-						<argLine>-Xms512m -Xmx1024m</argLine>
-					</configuration>
-        			</plugin>
-<plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-        <version>2.7</version>
-        <configuration>
-          <check>
-            <branchRate>85</branchRate>
-            <lineRate>85</lineRate>
-            <haltOnFailure>false</haltOnFailure>
-            <totalBranchRate>85</totalBranchRate>
-            <totalLineRate>85</totalLineRate>
-            <packageLineRate>85</packageLineRate>
-            <packageBranchRate>85</packageBranchRate>
-          </check>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>clean</goal>
-              <goal>check</goal>
-			  <goal>cobertura</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>	
-	  
-      			</plugins>
-    		</pluginManagement>
-		<finalName>onlinebanking</finalName>
-	</build>
-		 <reporting>
-    <plugins>
-   <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-        <version>2.7</version>
-        <reportSets>
-          <reportSet>
-            <reports>
-              <report>cobertura</report>
-            </reports>
-          </reportSet>
-        </reportSets>
-		<configuration>
-            <check></check>
-                <formats>
-                    <!--<format>html</format>-->
-                    <format>xml</format>
-                </formats>
-        </configuration>
-      </plugin>
-	</plugins>
-  </reporting>
-	
-</project>
+  <!-- <dependency> <groupId>com.sun</groupId> <artifactId>tools</artifactId>    <version>1.6.0</version> </dependency> -->
+  <!-- Struts 2 -->  <dependency>   <groupId>org.apache.struts</groupId>   <artifactId>struts2-core</artifactId>   <version>2.3.8</version>
+  </dependency>
+  <!-- MySQL database driver -->  <dependency>   <groupId>mysql</groupId>   <artifactId>mysql-connector-java</artifactId>   <version>5.1.9</version>  </dependency>
+  <!-- Hibernate Jar -->  <dependency>   <groupId>org.hibernate</groupId>   <artifactId>hibernate-annotations</artifactId>   <version>3.2.0.ga</version>  </dependency>  <dependency>   <groupId>org.hibernate</groupId>   <artifactId>hibernate-core</artifactId>   <version>3.3.0.GA</version>  </dependency>  <dependency>   <groupId>org.slf4j</groupId>   <artifactId>slf4j-api</artifactId>   <version>1.6.1</version>  </dependency>  <dependency>   <groupId>org.hibernate</groupId>   <artifactId>hibernate</artifactId>   <version>3.2.1.ga</version>   <exclusions>    <exclusion>     <groupId>javax.transaction</groupId>     <artifactId>jta</artifactId>    </exclusion>    <exclusion>     <groupId>cglib</groupId>     <artifactId>cglib</artifactId>
+    </exclusion>    <exclusion>     <artifactId>asm</artifactId>     <groupId>asm</groupId>    </exclusion>   </exclusions>  </dependency>  <dependency>   <groupId>cglib</groupId>   <artifactId>cglib</artifactId>   <version>2.2</version>  </dependency>  <!-- Hibernate Jar Ends -->  <!-- Log4j for logging -->  <dependency>   <groupId>log4j</groupId>   <artifactId>log4j</artifactId>   <version>1.2.16</version>   <scope>provided</scope>   <exclusions>    <exclusion>     <groupId>com.sun.jdmk</groupId>     <artifactId>jmxtools</artifactId>    </exclusion>    <exclusion>     <groupId>com.sun.jmx</groupId>     <artifactId>jmxri</artifactId>    </exclusion>   </exclusions>  </dependency>
+ </dependencies> <build>  <pluginManagement>         <plugins>           <plugin>             <groupId>org.apache.maven.plugins</groupId>             <artifactId>maven-compiler-plugin</artifactId>             <version>3.3</version>             <configuration>     <source>1.7</source>              <target>1.7</target>             </configuration>           </plugin>    <plugin>              <groupId>org.apache.maven.plugins</groupId>              <artifactId>maven-surefire-plugin</artifactId>              <version>2.18.1</version>     <configuration>      <forkMode>pertest</forkMode>      <argLine>-Xms512m -Xmx1024m</argLine>     </configuration>           </plugin><plugin>        <groupId>org.codehaus.mojo</groupId>        <artifactId>cobertura-maven-plugin</artifactId>        <version>2.7</version>        <configuration>          <check>            <branchRate>85</branchRate>            <lineRate>85</lineRate>            <haltOnFailure>false</haltOnFailure>            <totalBranchRate>85</totalBranchRate>            <totalLineRate>85</totalLineRate>            <packageLineRate>85</packageLineRate>            <packageBranchRate>85</packageBranchRate>          </check>        </configuration>        <executions>          <execution>            <goals>              <goal>clean</goal>              <goal>check</goal>     <goal>cobertura</goal>            </goals>          </execution>        </executions>      </plugin>             </plugins>      </pluginManagement>  <finalName>onlinebanking</finalName> </build> <profiles>        <profile>                <id>tomcatDeployment</id>                <activation>                  <activeByDefault>false</activeByDefault>                </activation>                 <build>                 <plugins>                <plugin> <groupId>org.apache.tomcat.maven</groupId>                <artifactId>tomcat7-maven-plugin</artifactId>                <version>2.2</version>                <configuration>                        <url>http://localhost:8080/manager/text</url>                        <server>tomcat</server>                        <path>/OnlineBanking</path>                 </configuration>                </plugin>                </plugins>                </build>        </profile>        </profiles> 
+   <reporting>    <plugins>   <plugin>        <groupId>org.codehaus.mojo</groupId>        <artifactId>cobertura-maven-plugin</artifactId>        <version>2.7</version>        <reportSets>          <reportSet>            <reports>              <report>cobertura</report>            </reports>          </reportSet>        </reportSets>  <configuration>            <check></check>                <formats>                    <!--<format>html</format>-->                    <format>xml</format>                </formats>        </configuration>      </plugin> </plugins>  </reporting> </project>
